--- a/0x00-semantic_html/0-index.html
+++ b/0x00-semantic_html/0-index.html
@@ -2,8 +2,11 @@
 <html lang="en">
     <head>
 		<meta charset="UTF-8">
-		<title>
-		</title>
+		<meta name="description" content="A blog post about sematic HTML and accessbility practices">
+		<meta name="keywords" content="HTML, Sematic, Accessibility, Blog, SEO">
+		<meta name="author" content="Your Name">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>Semantic Html Blog Post</title>
     </head>
     <body>
 		<header>
