--- a/0x02-tailwind-css/1-index.html
+++ b/0x02-tailwind-css/1-index.html
@@ -24,7 +24,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic CSS Grid Layout</title>
-    <link href="./output.css" rel="stylesheet">
+    <link href="./dist/output.css" rel="stylesheet">
 </head>
 <body >
     <header>
@@ -32,9 +32,9 @@
     </header>
 
     <main class="grid grid-cols-3 gap-4">
-        <div class="bg-blue-200 p-4">Column 1</div>
-        <div class="bg-blue-300 p-4">Column 2</div>
-        <div class="bg-blue-400 p-4">Column 3</div>
+        <div class="bg-green-200 p-4">Column 1</div>
+        <div class="bg-green-300 p-4">Column 2</div>
+        <div class="bg-green-400 p-4">Column 3</div>
     </main>
    </body>
 </html>
